--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,18 @@
 <div class="container">
     <h1>Angular Components</h1>
-    <app-post-form></app-post-form>
+    <app-post-form
+        (onAdd)='updatePost($event)'
+    ></app-post-form>
     <hr>
-    <app-post></app-post>
+    <app-post
+        *ngFor = 'let post of posts; let idx = index;'
+        [post] = 'post'
+    >
+        <div #info>
+            <small *ngIf='post.text.length > 10; else shortPost'>Too long post...</small>
+            <ng-template #shortPost>
+                <small>Short post</small>
+            </ng-template>
+        </div>
+    </app-post>
 </div>
