--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,47 @@
 <div class="container">
-    <h1>Angular Components</h1>
-    <h2>Sub header</h2>
-    <app-post-form
-        (onAdd)='updatePost($event)'
-    ></app-post-form>
-    <hr>
-    <app-post
-        *ngFor = 'let post of posts; let idx = index;'
-        [post] = 'post'
-        (onRemove)='removePost($event)'
-    >
-        <div #info>
-            <small *ngIf='post.text.length > 10; else shortPost'>Too long post...</small>
-            <ng-template #shortPost>
-                <small>Short post</small>
-            </ng-template>
-        </div>
-    </app-post>
+    <h1>Angular Directives</h1>
+
+    <p [appStyle]="'red'" [dStyles]="{border: '1px solid blue', borderRadius: '5px'}"    >
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, quos?
+    </p>
+    <p [appStyle]="'blue'" [dStyles]="{border: '1px solid red', borderRadius: '15px'}"    >
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, quos?
+    </p>
+
+    <button class="btn" (click)='isVisible = !isVisible'>Toggler</button>
+
+    <!-- <div *ngIf='isVisible' class="wrap">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Iure voluptatibus magni exercitationem ducimus quisquam excepturi
+        nemo repellat est maxime culpa.
+      </p>
+    </div> -->
+
+    <!-- <ng-template [ngIf]='isVisible'>
+      <div class="wrap">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Iure voluptatibus magni exercitationem ducimus quisquam excepturi
+          nemo repellat est maxime culpa.
+        </p>
+      </div>
+    </ng-template> -->
+
+    <div class="wrap" *appIfnot='isVisible'>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Iure voluptatibus magni exercitationem ducimus quisquam excepturi
+        nemo repellat est maxime culpa.
+      </p>
+    </div>
+
+    <ng-template [appIfnot]='!isVisible'>
+      <div class="wrap">
+        <p>
+          Lorem
+        </p>
+      </div>
+    </ng-template>
+
 </div>
