--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,47 +1,5 @@
 <div class="container">
-    <h1>Angular Directives</h1>
+    <h1>Angular Pipes</h1>
 
-    <p [appStyle]="'red'" [dStyles]="{border: '1px solid blue', borderRadius: '5px'}"    >
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, quos?
-    </p>
-    <p [appStyle]="'blue'" [dStyles]="{border: '1px solid red', borderRadius: '15px'}"    >
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, quos?
-    </p>
-
-    <button class="btn" (click)='isVisible = !isVisible'>Toggler</button>
-
-    <!-- <div *ngIf='isVisible' class="wrap">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Iure voluptatibus magni exercitationem ducimus quisquam excepturi
-        nemo repellat est maxime culpa.
-      </p>
-    </div> -->
-
-    <!-- <ng-template [ngIf]='isVisible'>
-      <div class="wrap">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Iure voluptatibus magni exercitationem ducimus quisquam excepturi
-          nemo repellat est maxime culpa.
-        </p>
-      </div>
-    </ng-template> -->
-
-    <div class="wrap" *appIfnot='isVisible'>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Iure voluptatibus magni exercitationem ducimus quisquam excepturi
-        nemo repellat est maxime culpa.
-      </p>
-    </div>
-
-    <ng-template [appIfnot]='!isVisible'>
-      <div class="wrap">
-        <p>
-          Lorem
-        </p>
-      </div>
-    </ng-template>
 
 </div>
