--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,14 @@
 <div class="container">
     <h1>Angular Services</h1>
+    <hr>
 
+    <div class="card">
+      <h2> Counter: {{myCounterService.counter}}</h2>
+      <button class="btn" (click)='myCounterService.increase()'>+</button>
+      <button class="btn" (click)='myCounterService.decrease()'>-</button>
+    </div>
+    <hr>
+
+    <app-counter></app-counter>
 
 </div>
