--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,13 @@
 p {
   font-size: 1.5rem;
 }
+
+input {
+  border-radius: 5px;
+  &.ng-invalid.ng-touched {
+    border: 3px solid red;
+  }
+  &.ng-valid.ng-touched{
+    border: 3px solid rgb(26, 231, 26);
+  }
+}
