--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,21 +3,41 @@
 
   <div class="card">
     <div class="form-control">
-      <input type="text" placeholder="Название">
+      <input type="text" placeholder="Title" [(ngModel)]='todoTitle'>
     </div>
-    <button class="btn">Добавить</button>
-    <button class="btn">Загрузить</button>
+    <button class="btn" (click)='addTodo()'>Add</button>
+    <button class="btn" (click)='fetchTodos()'>Load</button>
   </div>
 
   <hr>
 
-  <div class="card">
-    <p>
-      <span class="completed">Название</span>
-      <span>
-        <button class="btn btn-danger">Удалить</button>
-        <button class="btn">Завершить</button>
-      </span>
-    </p>
-  </div>
+  <p class="error" *ngIf='error; else todosBlock'>{{error}}</p>
+
+  <ng-template #todosBlock>
+
+    <div *ngIf='!loading; else loadingBlock'>
+      <div *ngIf='todos.length; else noTodos'>
+        <div class="card" *ngFor='let todo of todos'>
+          <p>
+            <span [class.completed]="todo.completed">{{todo.title | titlecase}}</span>
+            <span>
+              <button class="btn btn-danger" (click)='removeTodo(todo.id)'>Delete</button>
+              <button class="btn" [disabled]='todo.completed' (click)='completeTodo(todo.id)'>Done</button>
+            </span>
+          </p>
+        </div>
+      </div>
+
+      <ng-template #noTodos>
+        <p>No elemets</p>
+      </ng-template>
+
+    </div>
+
+    <ng-template #loadingBlock>
+      <p>Loading...</p>
+    </ng-template>
+
+  </ng-template>
+
 </div>
